# u2b-downloader

./: .gitignore  debug.py  main.py  main.spec  pyproject.toml
ffmpeg-windows/include/libavutil/: ffversion.h
ffmpeg-windows/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
