[project]
name = "u2b-downloader"
version = "0.1.0"
description = ""
authors = [{ name = "jiacwjcw", email = "quota0619@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytube (>=15.0.0,<16.0.0)", "pytubefix (>=8.10.0,<9.0.0)", "pyqt5 (>=5.15.11,<6.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
